# handler/listOpening.go
@@ -3,10 +3,21 @@ package handler
 import (
 	"net/http"
 
-	"github.com/Gabrielm3/Go-Devs-Jobs/schemas"
 	"github.com/gin-gonic/gin"
+
+	"github.com/Gabrielm3/Go-Devs-Jobs/schemas"
 )
 
+// @BasePath /api/v1
+
+// @Summary List opening
+// @Description List all job openings
+// @Tags Openings
+// @Accept json
+// @Produce json
+// @Sucess 200 {object} ListOpeningsResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /openings [get]
 func ListOpeningHandler(ctx *gin.Context) {
 	openings := []schemas.Opening{}
 
